feat: complete JWT authentication and authorization
🤖 Generated with Codebuff
Co-Authored-By: Codebuff <noreply@codebuff.com>